--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="container">
       <section id="main_content">
         <h3>
-          <a href="https://github.com/uraco/python_pandas/blob/gh-pages/%E6%A8%AA%E6%8C%81%E3%81%A1_4.ipynb" class="btn">test</a>
+          <a href="https://github.com/uraco/python_pandas/blob/gh-pages/%E6%A8%AA%E6%8C%81%E3%81%A1_4.ipynb">データフレームを縦持ちから横持ちにする方法</a>
       </section>
     </div>
 
