--- a/test2.html
+++ b/test2.html
@@ -1,7 +1,7 @@
 <html>
  <body>
 
-  横持ち_4.ipynb
+  <script src="https://gist.github.com/uraco/6806d95d7344d7facbf3a08d99dea0b9.js"></script>
 
  </body>
 </html>
